--- a/dockercompose.yaml
+++ b/dockercompose.yaml
@@ -21,3 +21,19 @@ services:
     ports:
       - "80:80"
     stop_signal: SIGINT
+
+  mysql:
+    build: databases/mySQL
+    restart: always
+    container_name: mysql
+    ports:
+      - "3308:3306"
+    stop_signal: SIGINT
+
+  phpmyadmin:
+    build: databases/phpmyadmin
+    restart: always
+    container_name: phpmyadmin
+    ports:
+      - "8080:80"
+    stop_signal: SIGINT
